--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,50 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;1,300;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap');
 *,
 *::before,
 *::after {
     margin: 0;
     padding: 0;
     border: 0;
+    font-size: 18px;
 }
-li, p, h1, h2, h3, h4{
+li, p, h2, h2, h3, h4{
     text-decoration: none;
     font-family: 'Nunito', sans-serif;
     margin: 20px 60px;
 }
  li, p, h1, h2, h3, h4::first-line{
- margin: 5px 70px;   
+ margin: 5px 100px;  
 }
 a{
     text-decoration: none;
     font-family: 'Nunito', sans-serif;
-    color: rgb(145, 101, 35);
+    font-style: italic;
+    font-weight: 600;
+    color: rgb(170, 118, 40);
 }
 img{
     height: 286px;
     padding: 5px 20px;
 }
 h1{
-    padding: 20px 0px 0px;
-    text-align: center;
+    text-align: left;
+    font-size: 90px;
+    font-family: "Libre Baskerville";
+    line-height: 71px;
+    padding: 10px 0px 0px 0px;
+}
+#sec{
+    color: rgb(206, 151, 69);
+    padding: 0px;
+}
+.name, h3{
+    font-size: 20px;
 }
 .comment{
-        text-align: center;
-
+    text-align: left;
+    font-size: 20px;
+    font-weight: 400;
 }
 .link{
     text-align: center;
