--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;1,700&display=swap');
 @font-face {
     font-family: 'Match';
-    src: url('fonts/MatchBold.woff2') format('woff2'),
-        url('fonts/MatchBold.woff') format('woff');
+    src: url('../fonts/MatchBold.woff2') format('woff2'),
+        url('../fonts/MatchBold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
